opam-version: "2.0"
maintainer: "david-engelmann david.engelmann44@gmail.com"
authors: "david-engelmann david.engelmann44@gmail.com"
homepage: "https://github.com/david-engelmann/atproto"

bug-reports: "https://github.com/david-engelmann/atproto/issues"
dev-repo: "git+https://github.com/david-engelmann/atproto.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.14.0"}
    "core"
    "async"
    "dune" {>= "2.0.0"}
    "h2" {>= "0.10.0"}
    "uri" {>= "4.2.0"}
    "lwt" {>= "5.6.1"}
    "h2-lwt-unix" {>= "0.10.0"}
    "httpaf" {>= "0.7.1"}
    "cohttp" {>= "5.1.0"}
    "cohttp-lwt-unix"
    "cohttp-async"
    "httpaf-lwt-unix"
    "ssl"
    "lwt_ssl"
    "fix"
    "jose"
    ]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml based tools for AT Protocol"
description: "
OCaml based tools for AT Protocol
"
