(library
 (name atproto)
 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async h2 httpaf
 httpaf-lwt-unix h2-lwt-unix ssl jose lwt_ssl lwt)
 (preprocess (pps ppx_jane))
 (modules App Auth Cohttp_client Session Moderation Graph User Http_client Http_method Label Request Response Repo Server Sync)
 (dirs bsky)
)
