(include_subdirs unqualified)
(library
 (name atproto)
 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async h2 httpaf
 httpaf-lwt-unix h2-lwt-unix ssl jose cbor lwt_ssl lwt)
 (preprocess (pps ppx_jane))
 (modules App Actor Auth Cohttp_client Car Embed Error Session Moderation Graph User Http_client
 Http_method Notification Feed Facet Label Request Response Repo Server Sync)
)
