(tests
 (names test_app test_auth test_session test_user test_cohttp_client test_http_client test_http_method test_request test_response)
 (libraries async core uri cohttp cohttp-lwt-unix cohttp-async h2 httpaf
 httpaf-lwt-unix h2-lwt-unix lwt ssl jose lwt_ssl ounit2 atproto)
 (modules test_app test_auth test_session test_user test_cohttp_client test_http_client test_http_method test_request test_response)
)
